syntax = "proto3";

package pb;

message Void{}

message NormalResp {
    string code    = 1;
    string message = 2;
}

// 七牛 bucket
enum MediaZone {
    Test      = 0;
    Public    = 1;
}
