syntax = "proto3";

package pb;
// import "pb/common.proto";

service StockService {
    // rpc SaveSingleGoods (Goods) returns (NormalResp);
    rpc SearchLocation (Location) returns (SearchLocationResp);

    rpc GetLocationId (Location) returns (LocationResp);
}

message Location {
    string user_id = 1;
    string warehouse = 2;
    string shelf = 3;
    string floor = 4;
    string location_id = 5;
    int64 total_stock = 6;
}

message LocationResp {
    string code = 1;
    string message = 2;
    Location data = 3;
}

message SearchLocationResp {
    string code = 1;
    string message = 2;
    repeated Location data = 3;
}

message Goods {
    string isbn = 1;
    string warehouse = 2;
    string shelf = 3;
    string floor = 4;
    int64 stock = 5;
    string goods_id = 6;
    string user_id = 7;
    string location_id = 8;
    string book_id = 9;
    int64 status = 10;
    string remark = 11;
    string map_id = 12;
    int64 create_at = 13;
}

message SearchStockResp {
    string code = 1;
    string message = 2;
    repeated Goods data = 3;
}
